--- a/src/components/Tabs/TabDatos.css
+++ b/src/components/Tabs/TabDatos.css
@@ -27,5 +27,20 @@
 }
 
 .stage-container {
+    margin-bottom: 70px;
+}
 
+.table-title {
+    margin-bottom: 16px;
+    font-weight: 500;
+}
+
+.table-row td {
+    text-align: center;
+}
+
+.final-btn-container {
+    margin: 50px auto 0;
+    display: flex;
+    justify-content: center;
 }
